Prevent visible cropping of hero text on tablets

--- a/source/stylesheets/_breakpoints.css.sass
+++ b/source/stylesheets/_breakpoints.css.sass
@@ -1,2 +1,3 @@
 $breakpoint-desktop: "screen and (max-width: 780px)"
+$breakpoint-tablet: "screen and (min-width: 480px) and (max-width: 780px)"
 $breakpoint-phone: "screen and (max-width: 480px)"
