--- a/source/stylesheets/modules/_masthead.css.sass
+++ b/source/stylesheets/modules/_masthead.css.sass
@@ -16,6 +16,10 @@
     padding:
       bottom: 9em
       top: 9em
+    @media #{$breakpoint-tablet}
+      padding:
+        bottom: 5em
+        top: 5em
     @media #{$breakpoint-phone}
       padding:
         bottom: 3em
@@ -25,6 +29,8 @@
 
   h1
     font-size: 4.096em
+    @media #{$breakpoint-tablet}
+      font-size: 3.375em
     @media #{$breakpoint-phone}
       font-size: 1.728em
 
